--- a/hspec-blink1.cabal
+++ b/hspec-blink1.cabal
@@ -20,6 +20,7 @@ library
                        , shelly
                        , hspec-core
                        , hspec
+                       , free
   default-language:    Haskell2010
 
 source-repository head
